@@ -222,10 +222,6 @@ const commons = angular.module('common', ['stats', 'udc', 'events', 'sql'])
       $scope.showSideNav = false;
     });
 
-    $scope.goToPath = function(path) {
-      $location.path(path);
-    };
-
     $scope.isActive = function(viewLocation) {
       if (viewLocation == '/') {
         return viewLocation === $location.path();
@@ -258,7 +254,7 @@ const commons = angular.module('common', ['stats', 'udc', 'events', 'sql'])
   .service('NavigationService', function() {
     var navBarElements = [];
 
-    var addNavBarElement = function(iconClass, text, urlPattern, index) {
+    var addNavBarElement = function(iconClass, text, urlPattern, index, state) {
       if (urlPattern.charAt(0) != '/') {
         urlPattern = '/' + urlPattern;
       }
@@ -267,7 +263,8 @@ const commons = angular.module('common', ['stats', 'udc', 'events', 'sql'])
         'text': text,
         'iconSrc': iconClass,
         'urlPattern': urlPattern,
-        'position': index
+        'position': index,
+        'state': state
       };
 
       navBarElements.push(pluginElement);
@@ -378,12 +375,13 @@ const commons = angular.module('common', ['stats', 'udc', 'events', 'sql'])
 });
 
 commons.run(function(NavigationService, $translate, $filter, $rootScope) {
+
   // Initial translation of navigation bar items
-  NavigationService.addNavBarElement('static/assets/icon-overview.svg', $filter('translate', 'NAVIGATION.OVERVIEW'), '/', 10);
-  NavigationService.addNavBarElement('static/assets/icon-console.svg', $filter('translate', 'NAVIGATION.CONSOLE'), '/console', 20);
-  NavigationService.addNavBarElement('static/assets/icon-table.svg', $filter('translate', 'NAVIGATION.TABLE'), '/tables', 30);
-  NavigationService.addNavBarElement('static/assets/icon-view.svg', $filter('translate', 'NAVIGATION.VIEW'), '/views', 31);
-  NavigationService.addNavBarElement('static/assets/icon-cluster.svg', $filter('translate', 'NAVIGATION.CLUSTER'), '/nodes', 40);
+  NavigationService.addNavBarElement('static/assets/icon-overview.svg', $translate.instant('NAVIGATION.OVERVIEW'), '/', 10, "overview");
+  NavigationService.addNavBarElement('static/assets/icon-console.svg', $filter('translate', 'NAVIGATION.CONSOLE'), '/console', 20, "console");
+  NavigationService.addNavBarElement('static/assets/icon-table.svg', $filter('translate', 'NAVIGATION.TABLE'), '/tables', 30, "tables");
+  NavigationService.addNavBarElement('static/assets/icon-view.svg', $filter('translate', 'NAVIGATION.VIEW'), '/views', 31, "views");
+  NavigationService.addNavBarElement('static/assets/icon-cluster.svg', $filter('translate', 'NAVIGATION.CLUSTER'), '/nodes', 40, "nodes");
 
   // Update Navbar Elements if Language is Changed
   $rootScope.$on('$translateChangeSuccess', function() {
